[package]
name = "getting_started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ss_1"
path = "src/ss_1.rs"

[[bin]]
name = "ss_2"
path = "src/ss_2.rs"

[[bin]]
name = "ss_3_1"
path = "src/ss_3/ss_3_1.rs"

[[bin]]
name = "ss_3_2"
path = "src/ss_3/ss_3_2.rs"

[dependencies]
nom = "7.1.3"
