[package]
name = "getting_started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ss_1"
path = "src/ss_1.rs"

[[bin]]
name = "ss_2"
path = "src/ss_2.rs"

[[bin]]
name = "ss_3_1"
path = "src/ss_3/ss_3_1.rs"

[[bin]]
name = "ss_3_2"
path = "src/ss_3/ss_3_2.rs"

[[bin]]
name = "ss_3_3"
path = "src/ss_3/ss_3_3.rs"

[[bin]]
name = "ss_4_1"
path = "src/ss_4/ss_4_1.rs"

[[bin]]
name = "ss_4_2"
path = "src/ss_4/ss_4_2.rs"

[[bin]]
name = "ss_5_1"
path = "src/ss_5/ss_5_1.rs"

[[bin]]
name = "ss_6_1"
path = "src/ss_6/ss_6_1.rs"

[dependencies]
nom = "7.1.3"
